--- a/Major_Project_Frontend/package.json
+++ b/Major_Project_Frontend/package.json
@@ -20,6 +20,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/react-bootstrap-table": "^4.3.11",
     "axios": "^1.4.0",
+    "dotenv": "^16.0.3",
     "mdb-react-ui-kit": "^6.0.0",
     "react": "^18.2.0",
     "react-bootstrap-validation": "^0.1.11",
